# FoundrySample

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/weather_digest/: __init__.py  config.py  emailer.py  foundry_client.py  main.py  scheduler.py
tests/: test_emailer.py  test_foundry_client.py
