[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shanghai-weather-foundry-demo"
version = "0.1.0"
description = "Demo app that sends a daily Shanghai weather digest using an AI Foundry endpoint."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

